文章从mysql中到出并格式化

--- a/content/posts/关于博客的一些新想法.md
+++ b/content/posts/关于博客的一些新想法.md
@@ -1,8 +1,8 @@
 ---
 title: "关于博客的一些新想法"
 date: Sat Mar 20 00:23:33 CST 2021
-categories: 项目
-tags: 项目
+categories: ["项目"]
+tags: ["项目"]
 draft: false
 ---
 
