文章从mysql中到出并格式化

--- a/content/posts/有时候要想重生，得先打骨折.md
+++ b/content/posts/有时候要想重生，得先打骨折.md
@@ -2,6 +2,8 @@
 title: "有时候要想重生，得先打骨折"
 date: Sat Mar 13 15:19:42 CST 2021
 categories: ["项目"]
+author: "JooKS"
+authorLink: "https://github.com/JooKS-me"
 tags: ["项目"]
 draft: false
 ---
